--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "proxy": "http://localhost:5001",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.1",
     "axios": "^0.19.2",
     "express": "^4.18.2",
     "pg": "^8.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
